unused files removed

--- a/templates/company.html
+++ b/templates/company.html
@@ -17,7 +17,7 @@
 	<meta name="author" content="SolvingScaleAI">
 	<link rel="stylesheet" href="{%static '/css/aos.css'%}">
 	<script></script>
-	<title>Solving Scale AI</title>
+	<title>Solving Scale AI Company</title>
 
 	<!-- Mobile Specific Meta
   ================================================== -->
@@ -29,18 +29,7 @@
 
 	<!-- CSS
   ================================================== -->
-	<!-- Themefisher Icon font -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}"> -->
-	<!-- bootstrap.min css -->
 	<link rel="stylesheet" href="{%static '/css/style.css'%}">
-	<!-- Lightbox.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}"> -->
-	<!-- animation css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}"> -->
-	<!-- Slick Carousel -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}"> -->
-	<!-- Main Stylesheet -->
-	<!-- font icon -->
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
@@ -48,7 +37,7 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-
+	<meta http-equiv="Cache-control" content="public">
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -271,39 +260,11 @@ Start About Section
 		</div>
 	</footer>
 
-
-	<!-- end Footer Area
-========================================== -->
-
-
-
-	<!-- 
-Essential Scripts
-=====================================-->
 	<!-- Main jQuery -->
 	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
-	<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
-
-	<!-- Form Validation -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
-
 	<!-- Bootstrap4 -->
 	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-	<!-- Parallax -->
-	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
-	<!-- lightbox -->
-	<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
-	<!-- Owl Carousel -->
-	<!-- <script src="{%static '/plugins/slick/slick.min.js'%}"></script> -->
-	<!-- filter -->
-	<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
-	<!-- Smooth Scroll js -->
-	<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
-
-	<!-- Custom js -->
+	
 	<script src="{%static '/js/script.js'%}"></script>
 	<script src="{%static '/js/val.js'%}"></script>
 	<script src="{%static '/js/aos.js'%}"></script>
