--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="title" content="Solving Scale AI | Solving Problems with AI | AI Consulting Company">
 	<meta name="description"
-		content="Solving Scale AI, a computer vision company that aims of providing affordable & accurate AI software’s,minimizes human monitoring of camera which focus on Facial & Optical Character Recognition, Augmented Reality, Self-driving cars.">
+	content="Solving Scale AI, a computer vision company that aims of providing affordable & accurate AI software’s,minimizes human monitoring of camera which focus on Facial & Optical Character Recognition, Augmented Reality, Self-driving cars.">
 	<meta name="Keywords"
-		content="AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence Company, AI Company in Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High end AI Company, Enterprise AI, AI and Machine Learning Company, 24/7 AI Company, Clear View Facial Recognition  ">
+	content="AI Company, AI Company in Indore, Best AI Company, AI Technology, Artificial Intelligence Company, AI Company in Consulting, AI in Healthcare, AI in Customerised Services, AI in Retail, Top AI Company, Consulting, High end AI Company, Enterprise AI, AI and Machine Learning Company, 24/7 AI Company, Clear View Facial Recognition  ">
 	<meta name="author" content="SolvingScaleAI">
+	<meta http-equiv="Cache-control" content="public">
 
 	<title>solvingscale.ai</title>
 
@@ -24,26 +25,10 @@
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="{%static '/images/symb.jpeg'%}" />
-
-	<!-- CSS
-  ================================================== -->
-	<!-- Themefisher Icon font -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}"> -->
-	<!-- bootstrap.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}"> -->
-	<!-- Lightbox.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}"> -->
-	<!-- animation css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}"> -->
-	<!-- Slick Carousel -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}"> -->
-	<!-- Main Stylesheet -->
 	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
 	<link rel="stylesheet" href="{%static '/css/imagetext.css'%}">
 	<!-- font icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!-- <link rel="stylesheet" href="{%static '/css/style.css'%}"> -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -288,37 +273,9 @@ End Fixed Navigation
 		</div>
 	</footer>
 
-
-	<!-- end Footer Area
-		========================================== -->
-
-
-
-	<!-- 
-		Essential Scripts
-		=====================================-->
-	<!-- Main jQuery -->
 	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
-	<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
-
-	<!-- Form Validation -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
-
 	<!-- Bootstrap4 -->
 	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-	<!-- Parallax -->
-	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
-	<!-- lightbox -->
-	<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
-	<!-- Owl Carousel -->
-	<!-- <script src="{%static '/plugins/slick/slick.min.js'%}"></script> -->
-	<!-- filter -->
-	<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
-	<!-- Smooth Scroll js -->
-	<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
 
 	<!-- Custom js -->
 	<script src="{%static '/js/script.js'%}"></script>
