--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -6,14 +6,17 @@
 <html>
 <!--<![endif]-->
 {% load static %}
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title" content="Portfolio | HealthCare | Retail | Helmsman security" >
-	<meta name="description" content="Our mission is to provide smart solutions to clients in order to enhance their business through AI. ">
-<meta name="keywords" content="Portfolio, face recognition, object detection, retail ai, ai in retail, online tailoring, visual trial room, unusual activity in stores, stores, crowd management, retail stores, security in retail, security in stores, security in malls, theft monitoring, product security, product monitoring, security">
+	<meta name="title" content="Portfolio | HealthCare | Retail | Helmsman security">
+	<meta name="description"
+		content="Our mission is to provide smart solutions to clients in order to enhance their business through AI. ">
+	<meta name="keywords"
+		content="Portfolio, face recognition, object detection, retail ai, ai in retail, online tailoring, visual trial room, unusual activity in stores, stores, crowd management, retail stores, security in retail, security in stores, security in malls, theft monitoring, product security, product monitoring, security">
 	<meta name="author" content="solvingscaleAi">
-
-	<title>Solving Scale AI</title>
+	<meta http-equiv="Cache-control" content="public">
+	<title>Career</title>
 
 	<!-- Mobile Specific Meta
   ================================================== -->
@@ -22,66 +25,60 @@
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="{%static '/images/symb.jpeg'%}" />
 
-	<!-- CSS
-  ================================================== -->
-	<!-- Themefisher Icon font -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}"> -->
-	<!-- bootstrap.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}"> -->
-	<!-- Lightbox.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}"> -->
-	<!-- animation css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}"> -->
-	<!-- Slick Carousel -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}"> -->
-	<!-- Main Stylesheet -->
 	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
 	<link rel="stylesheet" href="{%static '/css/style.css'%}">
 	<!-- font icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
-<link rel="preconnect" href="https://fonts.gstatic.com">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script>
+		window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'G-LVV5M06YY7');
-</script>
-<style>
-	
-	.navbar {
-        position: fixed;
-        z-index: 1000;
-        left: 0;
-        right: 0;
-        padding: 8px;
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
 
-    }
-    .navbar-brand{
-        padding: 0px 10px;
-    }	.footer-ul li a {
-        text-decoration: none;
-        margin: 0px 10px;
-    }
+		gtag('config', 'G-LVV5M06YY7');
+	</script>
+	<style>
+		.navbar {
+			position: fixed;
+			z-index: 1000;
+			left: 0;
+			right: 0;
+			padding: 8px;
 
-    .social-media li a {
-        text-decoration: none;
-        margin: 0px 5px;
-    }
-	ul li {
-        text-decoration: none;
-        display: inline;
-		font-family: 'Josefin Sans', sans-serif !important;
-    }
-	@media only screen and (max-width: 700px) {
-        .remove {
-            display: none;
-        }
-    }
-</style>
+		}
+
+		.navbar-brand {
+			padding: 0px 10px;
+		}
+
+		.footer-ul li a {
+			text-decoration: none;
+			margin: 0px 10px;
+		}
+
+		.social-media li a {
+			text-decoration: none;
+			margin: 0px 5px;
+		}
+
+		ul li {
+			text-decoration: none;
+			display: inline;
+			font-family: 'Josefin Sans', sans-serif !important;
+		}
+
+		@media only screen and (max-width: 700px) {
+			.remove {
+				display: none;
+			}
+		}
+	</style>
 </head>
 
 <body id="body">
@@ -111,44 +108,45 @@ Fixed Navigation
 ==================================== -->
 	<header class="navigation fixed-top">
 		<!-- <div class="container"> -->
-			<!-- main nav -->
-			<nav class="navbar navbar-expand-lg navbar-ligh bg-light">
-				<!-- logo -->
-				<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
-					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
-				</a>
-				<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
-				<!-- /logo -->
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-					aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-					<i class="fa fa-bars" aria-hidden="true"></i>
+		<!-- main nav -->
+		<nav class="navbar navbar-expand-lg navbar-ligh bg-light">
+			<!-- logo -->
+			<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
+				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
+					alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
+			</a>
+			<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
+			<!-- /logo -->
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+				aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+				<i class="fa fa-bars" aria-hidden="true"></i>
 
-				</button>
+			</button>
 
-				<div class="collapse navbar-collapse" id="navigation">
-					<ul class="navbar-nav ml-auto text-center camsecdemo">
-						<a href="{%url 'index'%}"><img class="logo-whi d-lg-none d-sm-block ml-auto mr-auto"
+			<div class="collapse navbar-collapse" id="navigation">
+				<ul class="navbar-nav ml-auto text-center camsecdemo">
+					<a href="{%url 'index'%}"><img class="logo-whi d-lg-none d-sm-block ml-auto mr-auto"
 							src="{%static '/images/logoblue.png'%}" style="width: 70%;" alt="solvingscale.ai" /></a>
 					<li class="nav-item ">
-							<a class="nav-link" href="{%url 'company'%}">Company</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="{%url 'consulting'%}">Consulting</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="{%url 'team'%}">Team</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="{%url 'portfolio'%}">Career</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="{%url 'contact'%}">Contact</a>
-						</li>
-						
-					</ul>
-				</div>
-			</nav>
-			<!-- /main nav -->
+						<a class="nav-link" href="{%url 'company'%}">Company</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="{%url 'consulting'%}">Consulting</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="{%url 'team'%}">Team</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="{%url 'portfolio'%}">Career</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="{%url 'contact'%}">Contact</a>
+					</li>
+
+				</ul>
+			</div>
+		</nav>
+		<!-- /main nav -->
 		<!-- </div> -->
 	</header>
 	<!--
@@ -156,117 +154,107 @@ End Fixed Navigation
 ==================================== -->
 
 
-<section class="single-page-header">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
+	<section class="single-page-header">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
 					<!-- section title -->
 					<div class="title text-center">
-						<h2 class="text-light" style="font-family: 'Josefin Sans', sans-serif !important;">Our Works</h2>
-						<p class="text-light" style="font-family: 'Josefin Sans', sans-serif !important;">Join us And help us remove roadblocks to innovation and create a smarter, better-connected world. Together we can enable what’s next.
+						<h2 class="text-light" style="font-family: 'Josefin Sans', sans-serif !important;">Our Works
+						</h2>
+						<p class="text-light" style="font-family: 'Josefin Sans', sans-serif !important;">Join us And
+							help us remove roadblocks to innovation and create a smarter, better-connected world.
+							Together we can enable what’s next.
 
-							Our mission is to provide smart solutions to clients in order to enhance their business through A.I. technology.
-							
-							AI applications are going to become more diverse, as they will be powered with the ability to analyse data across multiple functionalities, fraud detection and high-class customer relationship management. </p>
+							Our mission is to provide smart solutions to clients in order to enhance their business
+							through A.I. technology.
+
+							AI applications are going to become more diverse, as they will be powered with the ability
+							to analyse data across multiple functionalities, fraud detection and high-class customer
+							relationship management. </p>
 						<div class="border"></div>
 					</div>
 					<!-- /section title -->
+				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	</section>
 
-<!-- Start Portfolio Section
+	<!-- Start Portfolio Section
 		=========================================== -->
 
-<section class="portfolio section-sm" id="portfolio">
-	<div class="container-fluid">
-		<div class="row ">
-			<div class="col-md-12">
-				<div class="title text-center">
-					<h2  style="font-family: 'Josefin Sans', sans-serif !important;">Openings</h2><br>
-					<h3 style="font-family: 'Josefin Sans', sans-serif !important;">Currently We do not have any Openings </h3>
+	<section class="portfolio section-sm" id="portfolio">
+		<div class="container-fluid">
+			<div class="row ">
+				<div class="col-md-12">
+					<div class="title text-center">
+						<h2 style="font-family: 'Josefin Sans', sans-serif !important;">Openings</h2><br>
+						<h3 style="font-family: 'Josefin Sans', sans-serif !important;">Currently We do not have any
+							Openings </h3>
+					</div>
 				</div>
-		</div>
-		
-
-		</div> 
-	</div> 
-</section> <!-- End section -->
-<footer class="remove">
-	<div class="row" style="margin-left:  0px; margin-right:0px">
-		<div class="col-md-3">
-			<img src="{%static '/images/logoblue.png'%}" width="150" alt="solvingscale.ai">
-		</div>
-		<div class="col-md-6">
-			<ul class="footer-ul">
-				<li>
-					<a href="{%url 'company'%}">Company </a>
-				</li>
-				<li>
-					<a href="{%url 'consulting'%}">Consulting </a>
-				</li>
-				<li>
-					<a href="{%url 'team'%}">Team </a>
-				</li>
-				<li>
-					<a href="{%url 'portfolio'%}">Career </a>
-				</li>
-				<li>
-					<a href="{%url 'contact'%}">Contact </a>
-				</li>
-			</ul>
-		</div>
-		<div class="col-md-3">
-
-			<ul class="social-media">
-				<li><a href="https://www.facebook.com/Solving-Scale-AI-100840541958369"><i class="fa fa-facebook-f"
-							style="color: rgb(104, 100, 100);"></i></a></li>
-				<li><a href="https://www.linkedin.com/company/solvingscale-ai/"><i class="fa fa-linkedin"
-							style="color: rgb(104, 100, 100);"></i></a></li>
-				<li><a href="https://twitter.com/AiScale"><i class="	fa fa-twitter"
-							style="color: rgb(104, 100, 100);"></i></a></li>
-				<li><a href="https://www.instagram.com/solvingscale.ai/"><i class="fa fa-instagram"
-							style="color: rgb(104, 100, 100);"></i></a></li>
-			</ul>
-		</div>
-	</div>
-</footer>
 
 
-<!-- end Footer Area
+			</div>
+		</div>
+	</section> <!-- End section -->
+	<footer class="remove">
+		<div class="row" style="margin-left:  0px; margin-right:0px">
+			<div class="col-md-3">
+				<img src="{%static '/images/logoblue.png'%}" width="150" alt="solvingscale.ai">
+			</div>
+			<div class="col-md-6">
+				<ul class="footer-ul">
+					<li>
+						<a href="{%url 'company'%}">Company </a>
+					</li>
+					<li>
+						<a href="{%url 'consulting'%}">Consulting </a>
+					</li>
+					<li>
+						<a href="{%url 'team'%}">Team </a>
+					</li>
+					<li>
+						<a href="{%url 'portfolio'%}">Career </a>
+					</li>
+					<li>
+						<a href="{%url 'contact'%}">Contact </a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-md-3">
+
+				<ul class="social-media">
+					<li><a href="https://www.facebook.com/Solving-Scale-AI-100840541958369"><i class="fa fa-facebook-f"
+								style="color: rgb(104, 100, 100);"></i></a></li>
+					<li><a href="https://www.linkedin.com/company/solvingscale-ai/"><i class="fa fa-linkedin"
+								style="color: rgb(104, 100, 100);"></i></a></li>
+					<li><a href="https://twitter.com/AiScale"><i class="	fa fa-twitter"
+								style="color: rgb(104, 100, 100);"></i></a></li>
+					<li><a href="https://www.instagram.com/solvingscale.ai/"><i class="fa fa-instagram"
+								style="color: rgb(104, 100, 100);"></i></a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
+
+
+	<!-- end Footer Area
 ========================================== -->
 
 
 
-<!-- 
+	<!-- 
 Essential Scripts
 =====================================-->
-<!-- Main jQuery -->
-<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-<!-- Google Map -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
-<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
+	<!-- Main jQuery -->
+	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
 
-<!-- Form Validation -->
-<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
-<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
-
-<!-- Bootstrap4 -->
-<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-<!-- Parallax -->
-<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
-<!-- lightbox -->
-<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
-<!-- Owl Carousel -->
-<!-- <script src="{%static '/plugins/slick/slick.min.js'%}"></script> -->
-<!-- filter -->
-<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
-<!-- Smooth Scroll js -->
-<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
-
-<!-- Custom js -->
-<script src="{%static '/js/script.js'%}"></script><script src="{%static '/js/val.js'%}"></script>
+	<!-- Bootstrap4 -->
+	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
+	<!-- Custom js -->
+	<script src="{%static '/js/script.js'%}"></script>
+	<script src="{%static '/js/val.js'%}"></script>
 
 </body>
 
