--- a/templates/automobile.html
+++ b/templates/automobile.html
@@ -16,7 +16,7 @@
 		content="Our team, team solving scale.ai , Ai consulting services, deep learning, computer vision company">
 	<meta name="author" content="solvingscaleAi">
 
-	<title>Solving Scale AI</title>
+	<title>Automobile</title>
 
 	<!-- Mobile Specific Meta
   ================================================== -->
@@ -25,21 +25,6 @@
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="{%static '/images/symb.jpeg'%}" />
 
-
-	<!-- CSS
-  ================================================== -->
-	<!-- Themefisher Icon font -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}"> -->
-	<!-- bootstrap.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}"> -->
-	<!-- Lightbox.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}"> -->
-	<!-- animation css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}"> -->
-	<!-- Slick Carousel -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}"> -->
-	<!-- Main Stylesheet -->
-	<!-- <link rel="stylesheet" href="{%static '/css/style.css'%}"> -->
 	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
 	<link rel="stylesheet" href="{%static '/css/aos.css'%}">
 	<!-- font icon -->
@@ -48,6 +33,7 @@
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+	<meta http-equiv="Cache-control" content="public">
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -62,6 +48,7 @@
 		.card-title {
 			color: rgb(18, 138, 236);
 		}
+
 		.navbar {
 			position: fixed;
 			z-index: 1000;
@@ -212,8 +199,10 @@ End Fixed Navigation
 				<img src="{%static '/images/automobile.gif'%}" style="width: 100%;" alt="solvingscale.ai automobile">
 			</div>
 		</div><br>
-		<h2 class="text-center" data-aos="fade-down" data-aos-duration="600">Challenges Faced by the Automobile Sector</h2>
-		<p class="text-center" data-aos="zoom-in" data-aos-duration="1500">According to the National Highway Traffic Safety Administration, every year about 100,000
+		<h2 class="text-center" data-aos="fade-down" data-aos-duration="600">Challenges Faced by the Automobile Sector
+		</h2>
+		<p class="text-center" data-aos="zoom-in" data-aos-duration="1500">According to the National Highway Traffic
+			Safety Administration, every year about 100,000
 			police-reported crashes involve drowsy driving. These crashes result in more than 1,550 fatalities and
 			71,000 injuries. This leads to dangerous road accidents and road blocking at highways. The same study found
 			that 109,000 of those drowsy driving crashes resulted in an injury and about 6,400 were fatal. Researchers
@@ -227,7 +216,8 @@ End Fixed Navigation
 					<div class="card-body ">
 						<h5 class="card-title" data-aos="fade-down" data-aos-duration="600">Vehicle Collision </h5>
 
-						<p class="card-text " data-aos="flip-up" data-aos-duration="1500">Lane departure crashes, which occur when a driver leaves the lane they are in and collide with another vehicle.</p>
+						<p class="card-text " data-aos="flip-up" data-aos-duration="1500">Lane departure crashes, which
+							occur when a driver leaves the lane they are in and collide with another vehicle.</p>
 
 					</div>
 				</div>
@@ -240,7 +230,9 @@ End Fixed Navigation
 						<h5 class="card-title" data-aos="fade-down" data-aos-duration="600">Driver irresponsibility
 						</h5>
 
-						<p class="card-text " data-aos="flip-up" data-aos-duration="1500">Most of the car accident occurs due to the ireesponsibility of driver while driving and it can cause to the death of several inncocent people.</p>
+						<p class="card-text " data-aos="flip-up" data-aos-duration="1500">Most of the car accident
+							occurs due to the ireesponsibility of driver while driving and it can cause to the death of
+							several inncocent people.</p>
 
 					</div>
 				</div>
@@ -251,9 +243,12 @@ End Fixed Navigation
 					<img class="card-img-top mx-auto" style="width: 30%;" src="{%static '/images/worker.png'%}"
 						alt="solvingscale.ai theft rate">
 					<div class="card-body ">
-						<h5 class="card-title" data-aos="fade-down" data-aos-duration="600"> Inefficiency in Vehicle Manufacturing </h5>
+						<h5 class="card-title" data-aos="fade-down" data-aos-duration="600"> Inefficiency in Vehicle
+							Manufacturing </h5>
 
-						<p class="card-text " data-aos="flip-up" data-aos-duration="1500">In most of the car manufacturing factory, during cross validantion by human defects in manufacturing pops up whic leads to degrade the trust by the customers.</p>
+						<p class="card-text " data-aos="flip-up" data-aos-duration="1500">In most of the car
+							manufacturing factory, during cross validantion by human defects in manufacturing pops up
+							whic leads to degrade the trust by the customers.</p>
 
 					</div>
 				</div>
@@ -315,7 +310,7 @@ End Fixed Navigation
 							<ul>
 								<li>- Vehicle Dent Detection</li>
 								<li>- Parts Mis-Management Detection</li>
-								
+
 							</ul>
 						</p>
 
@@ -331,13 +326,6 @@ End Fixed Navigation
 					<div class="card-body mx-auto">
 						<h5 class="card-title text-center" data-aos="fade-down" data-aos-duration="600">Workplace SOP
 						</h5>
-
-						<!-- <p class="card-text text-left ">
-							<ul>
-								<li>- Automatic Licence Plate Recognition(ALPR)</li>
-								<li>- Fire and Smoke Detection</li>
-							</ul>
-						</p> -->
 						<p class="card-text text-left " data-aos="flip-up" data-aos-duration="1500">
 
 							<ul>
@@ -448,15 +436,7 @@ End Fixed Navigation
 		<div class="formdiv second" id="consulation">
 			<div class="row text-center">
 				<div class="col-md-6 my-auto"><br>
-					<!-- <h1>5.0/5.0</h1>
-                    <ul>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                    </ul>
-                    <h5>by our 20+ clients</h5> -->
+
 
 					<div class="row my-5 ">
 						<div class="col-1"></div>
@@ -516,16 +496,7 @@ End Fixed Navigation
 										<option value="RETAIL">RETAIL</option>
 									</select>
 								</div>
-								<!-- <div class="form-group ">
 
-                                    <select id="inputState2" name="pay" class="form-control" required>
-                                        <option value="" selected>I will genuinely pay about:</option>
-                                        <option value="$60 - $500">$60 - $500</option>
-                                        <option value="$500 - $1500">$500 - $1500 </option>
-                                        <option value="$1500 - $3500">$1500 - $3500</option>
-                                        <option value="More than $3500">More than $3500</option>
-                                    </select>
-                                </div> -->
 								<div class="form-group">
 
 									<textarea class="form-control" name="need"
@@ -597,26 +568,9 @@ End Fixed Navigation
 	=====================================-->
 	<!-- Main jQuery -->
 	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
-	<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
-
-	<!-- Form Validation -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
 
 	<!-- Bootstrap4 -->
 	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-	<!-- Parallax -->
-	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
-	<!-- lightbox -->
-	<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
-	<!-- Owl Carousel -->
-	<script src="{%static '/plugins/slick/slick.min.js'%}"></script>
-	<!-- filter -->
-	<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
-	<!-- Smooth Scroll js -->
-	<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
 
 	<!-- Custom js -->
 	<script src="{%static '/js/script.js'%}"></script>
