--- a/templates/consulting.html
+++ b/templates/consulting.html
@@ -25,12 +25,11 @@
     <link rel="shortcut icon" type="image/x-icon" href="{%static '/images/symb.jpeg'%}" />
     <link rel="stylesheet" href="{%static '/css/aos.css'%}">
     <title>Consulting</title>
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href=" {%static '/css/bootstrap.css'%} ">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <meta http-equiv="Cache-control" content="public">
 </head>
 <style>
     .navbar {
@@ -376,16 +375,7 @@
         <div class="formdiv second" id="consulation">
             <div class="row text-center">
                 <div class="col-md-6 my-auto"><br>
-                    <!-- <h1>5.0/5.0</h1>
-                    <ul>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                    </ul>
-                    <h5>by our 20+ clients</h5> -->
-
+                 
                     <div class="row my-5 ">
                         <div class="col-1"></div>
                         <div class="col text-right">
@@ -444,16 +434,7 @@
                                         <option value="RETAIL">RETAIL</option>
                                     </select>
                                 </div>
-                                <!-- <div class="form-group ">
-
-                                    <select id="inputState2" name="pay" class="form-control" required>
-                                        <option value="" selected>I will genuinely pay about:</option>
-                                        <option value="$60 - $500">$60 - $500</option>
-                                        <option value="$500 - $1500">$500 - $1500 </option>
-                                        <option value="$1500 - $3500">$1500 - $3500</option>
-                                        <option value="More than $3500">More than $3500</option>
-                                    </select>
-                                </div> -->
+                       
                                 <div class="form-group">
 
                                     <textarea class="form-control" name="need"
