--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,8 +15,8 @@
 	<meta name="keywords"
 		content="Contact us, AI company, ai solutions,face recogition,attendance management system, ERP, computer vision syndrome.">
 	<meta name="author" content="solvingscaleAi">
-
-	<title>Solving Scale AI</title>
+	<meta http-equiv="Cache-control" content="public">
+	<title>Contact Us</title>
 
 	<!-- Mobile Specific Meta
   ================================================== -->
@@ -25,24 +25,15 @@
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="{%static '/images/symb.jpeg'%}" />
 
-	<!-- CSS
-  ================================================== -->
-	<!-- Themefisher Icon font -->
-	<link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}">
-	<!-- bootstrap.min css -->
-	<link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}">
-	<!-- Lightbox.min css -->
-	<link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}">
-	<!-- animation css -->
-	<link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}">
-	<!-- Slick Carousel -->
-	<link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}">
+
 	<!-- Main Stylesheet -->
 	<link rel="stylesheet" href="{%static '/css/style.css'%}">
+	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
 	<!-- font icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
+	
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -111,7 +102,7 @@
 			margin-right: -1px;
 			border-bottom: 4px solid rgba(0, 0, 0, 0.2);
 			border-radius: 2px;
-			
+
 		}
 
 
@@ -241,8 +232,7 @@ End Fixed Navigation
 	<div class="container">
 
 
-		<div class="row"
-			style="   padding: 10px;border-radius: 10px;">
+		<div class="row" style="   padding: 10px;border-radius: 10px;">
 			<div class="col-md-6">
 				<div class="switch-field text-center ">
 					<input type="radio" id="radio-one" name="switch-one" value="1" checked />
@@ -289,7 +279,7 @@ End Fixed Navigation
 							alt="">
 					</div>
 					<div class="col">
-						
+
 						2nd Floor, Adviti Nivas PLOT - 26, near RTO Office,
 						Chandragiri
 						Colony, Trimulgherry, Secunderabad, Telangana 500015
@@ -300,7 +290,7 @@ End Fixed Navigation
 							alt="">
 					</div>
 					<div class="col ">
-						
+
 						+91-7507898930
 					</div>
 				</div>
@@ -310,15 +300,16 @@ End Fixed Navigation
 				<div class="indore" class="card" style="width: 100%; height: 100%;">
 					<div class="card-body">
 						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.457185280489!2d75.89182471496274!3d22.74840858509263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3962fde29067a05b%3A0x8becd85ff0793cad!2sTech%20Driven%20Basic%20(TDB.AI)!5e0!3m2!1sen!2sin!4v1611639635852!5m2!1sen!2sin"
+							src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3805.861083484804!2d78.5053892!3d17.4663618!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb997deea44453%3A0x711962286c3e4ce8!2sVeloxtech%20Solutions!5e0!3m2!1sen!2sin!4v1611638625149!5m2!1sen!2sin"
 							width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""
 							aria-hidden="false" tabindex="0"></iframe>
+
 					</div>
 				</div>
 				<div class="hyderabad" class="card" style="width: 100%; height: 100%;">
 					<div class="card-body">
 						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3805.861083484804!2d78.5053892!3d17.4663618!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb997deea44453%3A0x711962286c3e4ce8!2sVeloxtech%20Solutions!5e0!3m2!1sen!2sin!4v1611638625149!5m2!1sen!2sin"
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.457185280489!2d75.89182471496274!3d22.74840858509263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3962fde29067a05b%3A0x8becd85ff0793cad!2sTech%20Driven%20Basic%20(TDB.AI)!5e0!3m2!1sen!2sin!4v1611639635852!5m2!1sen!2sin"
 							width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen=""
 							aria-hidden="false" tabindex="0"></iframe>
 					</div>
@@ -378,28 +369,8 @@ Essential Scripts
 =====================================-->
 	<!-- Main jQuery -->
 	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
-	<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
-
-	<!-- Form Validation -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
-
 	<!-- Bootstrap4 -->
 	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-	<!-- Parallax -->
-	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
-	<!-- lightbox -->
-	<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
-	<!-- Owl Carousel -->
-	<!-- <script src="{%static '/plugins/slick/slick.min.js'%}"></script> -->
-	<!-- filter -->
-	<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
-	<!-- Smooth Scroll js -->
-	<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
-
-	<!-- Custom js -->
 	<script src="{%static '/js/script.js'%}"></script>
 	<script src="{%static '/js/val.js'%}"></script>
 	<script>
