--- a/templates/customize.html
+++ b/templates/customize.html
@@ -15,8 +15,8 @@
 	<meta name="keywords"
 		content="Our team, team solving scale.ai , Ai consulting services, deep learning, computer vision company">
 	<meta name="author" content="solvingscaleAi">
-
-	<title>Solving Scale AI</title>
+	<meta http-equiv="Cache-control" content="public">
+	<title>Smartcity</title>
 
 	<!-- Mobile Specific Meta
   ================================================== -->
@@ -25,30 +25,14 @@
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="{%static '/images/symb.jpeg'%}" />
 
-
-	<!-- CSS
-  ================================================== -->
-	<!-- Themefisher Icon font -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}"> -->
-	<!-- bootstrap.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}"> -->
 	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
-	<!-- <link rel="stylesheet" href="{%static '/css/style.css'%}"> -->
-	<!-- Lightbox.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}"> -->
-	<!-- animation css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}"> -->
-	<!-- Slick Carousel -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}"> -->
-	<!-- Main Stylesheet -->
-	<!-- <link rel="stylesheet" href="{%static '/css/style.css'%}"> -->
-	<!-- font icon -->
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<link rel="stylesheet" href="{%static '/css/aos.css'%}">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -127,14 +111,15 @@
 		* {
 			font-family: 'Josefin Sans', sans-serif;
 		}
-		.services-border{
-			border-left: 3px solid;padding:10px; border-image: 
-						  linear-gradient(
-							to bottom, 
-							#3399ff , 
-							#ff99cc
-						  ) 1 100%;
-		  }
+
+		.services-border {
+			border-left: 3px solid;
+			padding: 10px;
+			border-image:
+				linear-gradient(to bottom,
+					#3399ff,
+					#ff99cc) 1 100%;
+		}
 	</style>
 </head>
 
@@ -349,13 +334,6 @@ End Fixed Navigation
 					<div class="card-body mx-auto">
 						<h5 class="card-title text-center" data-aos="fade-down" data-aos-duration="600">Workplace SOP
 						</h5>
-
-						<!-- <p class="card-text text-left ">
-							<ul>
-								<li>- Automatic Licence Plate Recognition(ALPR)</li>
-								<li>- Fire and Smoke Detection</li>
-							</ul>
-						</p> -->
 						<p class="card-text text-left " data-aos="flip-up" data-aos-duration="1500">
 
 							<ul>
@@ -464,15 +442,6 @@ End Fixed Navigation
 		<div class="formdiv second" id="consulation">
 			<div class="row text-center">
 				<div class="col-md-6 my-auto"><br>
-					<!-- <h1>5.0/5.0</h1>
-                    <ul>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                        <li><img src="{%static '/images/star.png'%}" alt="solvingscale.ai rating"></li>
-                    </ul>
-                    <h5>by our 20+ clients</h5> -->
 
 					<div class="row my-5 ">
 						<div class="col-1"></div>
@@ -532,16 +501,7 @@ End Fixed Navigation
 										<option value="RETAIL">RETAIL</option>
 									</select>
 								</div>
-								<!-- <div class="form-group ">
 
-                                    <select id="inputState2" name="pay" class="form-control" required>
-                                        <option value="" selected>I will genuinely pay about:</option>
-                                        <option value="$60 - $500">$60 - $500</option>
-                                        <option value="$500 - $1500">$500 - $1500 </option>
-                                        <option value="$1500 - $3500">$1500 - $3500</option>
-                                        <option value="More than $3500">More than $3500</option>
-                                    </select>
-                                </div> -->
 								<div class="form-group">
 
 									<textarea class="form-control" name="need"
@@ -612,28 +572,11 @@ End Fixed Navigation
 	=====================================-->
 	<!-- Main jQuery -->
 	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
-	<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
-
-	<!-- Form Validation -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
-
+	
 	<!-- Bootstrap4 -->
 	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-	<!-- Parallax -->
-	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
-	<!-- lightbox -->
-	<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
-	<!-- Owl Carousel -->
-	<script src="{%static '/plugins/slick/slick.min.js'%}"></script>
-	<!-- filter -->
-	<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
-	<!-- Smooth Scroll js -->
-	<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
 
-	<!-- Custom js -->
+
 	<script src="{%static '/js/script.js'%}"></script>
 	<script src="{%static '/js/val.js'%}"></script>
 	<script src="{%static '/js/aos.js'%}"></script>
