--- a/templates/team.html
+++ b/templates/team.html
@@ -24,22 +24,6 @@
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="{%static '/images/symb.jpeg'%}" />
-
-
-	<!-- CSS
-  ================================================== -->
-	<!-- Themefisher Icon font -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}"> -->
-	<!-- bootstrap.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}"> -->
-	<!-- Lightbox.min css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}"> -->
-	<!-- animation css -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}"> -->
-	<!-- Slick Carousel -->
-	<!-- <link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}"> -->
-	<!-- Main Stylesheet -->
-	<!-- <link rel="stylesheet" href="{%static '/css/style.css'%}"> -->
 	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
 	<!-- font icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,6 +32,7 @@
 	<link rel="stylesheet" href="{%static '/css/aos.css'%}">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+	<meta http-equiv="Cache-control" content="public">
 	<script>
 		window.dataLayer = window.dataLayer || [];
 
@@ -276,27 +261,11 @@ End Fixed Navigation
 	=====================================-->
 	<!-- Main jQuery -->
 	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
-	<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
-
-	<!-- Form Validation -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
-	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
 
 	<!-- Bootstrap4 -->
 	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-	<!-- Parallax -->
-	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
-	<!-- lightbox -->
-	<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
 	<!-- Owl Carousel -->
-	<script src="{%static '/plugins/slick/slick.min.js'%}"></script>
-	<!-- filter -->
-	<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
-	<!-- Smooth Scroll js -->
-	<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
-
+	<!-- <script src="{%static '/plugins/slick/slick.min.js'%}"></script> -->
 	<!-- Custom js -->
 	<script src="{%static '/js/script.js'%}"></script>
 	<script src="{%static '/js/val.js'%}"></script>
